# CodingAgent

./: .gitignore  .yuko.toml.example  CLAUDE.md  README.md  pyproject.toml
tests/: test_cli.py  test_config.py  test_engine.py  test_provider.py  test_tools.py
yuko/: __init__.py  __main__.py  cli.py  config.py  engine.py
yuko/providers/: __init__.py  base.py  client.py
yuko/tools/: __init__.py  base.py  registry.py  schemas.py
