[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuko"
version = "0.1.0"
description = "一个轻量级 AI Coding Agent —— 从零搭建，学习 pico 架构"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
yuko = "yuko.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["yuko*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
